# reviewinator

./: .gitignore  CLAUDE.md  IDEAS.md  Makefile  README.md  build_app.py  config.example.yaml  pyproject.toml  setup.py
docs/plans/: 2026-02-13-created-prs-design.md  2026-02-13-created-prs-implementation.md  2026-02-13-green-check-mark-design.md  2026-02-13-green-check-mark.md  2026-02-15-filter-team-review-requests-design.md  2026-02-15-filter-team-review-requests-implementation.md  2026-02-15-repo-exclusion-filtering-design.md  2026-02-15-repo-exclusion-filtering-implementation.md  2026-02-15-show-repos-when-empty-design.md  2026-02-15-show-repos-when-empty-implementation.md  2026-02-16-macos-app-bundling-design.md  2026-02-16-macos-app-bundling-implementation.md  2026-02-18-approved-prs-any-filter-design.md  2026-02-18-approved-prs-any-filter.md  2026-02-18-pr-status-emoji-design.md  2026-02-18-pr-status-emoji.md
launchd/: com.reviewinator.plist
scripts/: bump_version.py
src/reviewinator/: __init__.py  __main__.py  app.py  cache.py  config.py  github_client.py  notifications.py
tests/: __init__.py  conftest.py  test_app.py  test_cache.py  test_config.py  test_github_client.py  test_notifications.py
thoughts/plans/: 2026-02-13-reviewinator-design.md  2026-02-13-reviewinator-implementation.md
