[project]
name = "reviewinator"
version = "0.1.0"
description = "macOS menu bar app showing pending GitHub PR reviews"
requires-python = ">=3.11"
dependencies = [
    "rumps>=0.4.0",
    "PyGithub>=2.1.0",
    "pync>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
reviewinator = "reviewinator.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reviewinator"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
